include/dss_capi.h

    enum LineUnits {
        LineUnits_none = 0, ///< No line length unit.
        LineUnits_Miles = 1, ///< Line length units in miles.
        LineUnits_kFt = 2, ///< Line length units are in thousand feet.
        LineUnits_km = 3, ///< Line length units are km.
        LineUnits_meter = 4, ///< Line length units are meters.
        LineUnits_ft = 5, ///< Line units in feet.
        LineUnits_inch = 6, ///< Line length units are inches.
        LineUnits_cm = 7, ///< Line units are cm.
        LineUnits_mm = 8, ///< Line length units are mm.
        LineUnits_Maxnum = 9 ///< Maximum number of line units constants.
    };
    /*! 
    Number of LineCodes
    */
    DSS_CAPI_DLL int32_t LineCodes_Get_Count(void);
    DSS_CAPI_DLL int32_t LineCodes_Get_First(void);
    DSS_CAPI_DLL int32_t LineCodes_Get_Next(void);
    /*! 
    Name of active LineCode
    */
    DSS_CAPI_DLL const char* LineCodes_Get_Name(void);
    DSS_CAPI_DLL void LineCodes_Set_Name(const char* Value);
    /*! 
    Flag denoting whether impedance data were entered in symmetrical components
    */
    DSS_CAPI_DLL uint16_t LineCodes_Get_IsZ1Z0(void);
    DSS_CAPI_DLL int32_t LineCodes_Get_Units(void);
    DSS_CAPI_DLL void LineCodes_Set_Units(int32_t Value);
    /*! 
    Number of Phases
    */
    DSS_CAPI_DLL int32_t LineCodes_Get_Phases(void);
    /*! 
    Number of Phases
    */
    DSS_CAPI_DLL void LineCodes_Set_Phases(int32_t Value);
    /*! 
    Positive-sequence resistance ohms per unit length
    */
    DSS_CAPI_DLL double LineCodes_Get_R1(void);
    DSS_CAPI_DLL void LineCodes_Set_R1(double Value);
    /*! 
    Positive-sequence reactance, ohms per unit length
    */
    DSS_CAPI_DLL double LineCodes_Get_X1(void);
    DSS_CAPI_DLL void LineCodes_Set_X1(double Value);
    /*! 
    Zero-sequence Resistance, ohms per unit length
    */
    DSS_CAPI_DLL double LineCodes_Get_R0(void);
    /*! 
    Zero-sequence Reactance, Ohms per unit length
    */
    DSS_CAPI_DLL double LineCodes_Get_X0(void);
    DSS_CAPI_DLL void LineCodes_Set_R0(double Value);
    DSS_CAPI_DLL void LineCodes_Set_X0(double Value);
    /*! 
    Zero-sequence capacitance, nF per unit length
    */
    DSS_CAPI_DLL double LineCodes_Get_C0(void);
    /*! 
    Positive-sequence capacitance, nF per unit length
    */
    DSS_CAPI_DLL double LineCodes_Get_C1(void);
    DSS_CAPI_DLL void LineCodes_Set_C0(double Value);
    DSS_CAPI_DLL void LineCodes_Set_C1(double Value);
    /*! 
    Capacitance matrix, nF per unit length
    */
    DSS_CAPI_DLL void LineCodes_Get_Cmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as LineCodes_Get_Cmatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LineCodes_Get_Cmatrix_GR(void);
    /*! 
    Resistance matrix, ohms per unit length
    */
    DSS_CAPI_DLL void LineCodes_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as LineCodes_Get_Rmatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LineCodes_Get_Rmatrix_GR(void);
    /*! 
    Reactance matrix, ohms per unit length
    */
    DSS_CAPI_DLL void LineCodes_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Same as LineCodes_Get_Xmatrix but using the global buffer interface for results
    */
    DSS_CAPI_DLL void LineCodes_Get_Xmatrix_GR(void);
    DSS_CAPI_DLL void LineCodes_Set_Cmatrix(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineCodes_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void LineCodes_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    /*! 
    Normal Ampere rating
    */
    DSS_CAPI_DLL double LineCodes_Get_NormAmps(void);
    DSS_CAPI_DLL void LineCodes_Set_NormAmps(double Value);
    /*! 
    Emergency ampere rating
    */
    DSS_CAPI_DLL double LineCodes_Get_EmergAmps(void);
    DSS_CAPI_DLL void LineCodes_Set_EmergAmps(double Value);
    /*! 
    Array of strings with names of all devices
    */
    DSS_CAPI_DLL void LineCodes_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    DSS_CAPI_DLL int32_t LineCodes_Get_idx(void);
    DSS_CAPI_DLL void LineCodes_Set_idx(int32_t Value);